// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete fail 1`] = `
Object {
  "Constructor": "ProjectDeletePage",
  "Options": Object {
    "ID": "widget",
    "containerSelector": "body",
    "dataLoaded": true,
    "dataSaving": true,
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "errors": Array [],
    "project": Object {
      "cwd": "/tmp/",
      "id": 1,
      "name": "Test",
    },
    "types": Array [],
  },
  "html": "
<ul class=\\"breadcrumb\\">
  <li>
    <a href=\\"/\\" class=\\"\\">Projects
      <!--default-->
    </a>
  </li>
  <li>
    <a href=\\"/\\" class=\\"\\">Test
      <!--default-->
    </a>
  </li>
  <!--if-->
  <!--if-->
  <li>Delete</li>
</ul>
<!--BreadCrumb-->
<!--if-->
<!--ErrorsPanel-->
<div class=\\"modal\\">
  <div class=\\"content\\">
    <div class=\\"header\\">Delete project</div>
    <div class=\\"body\\">Do you want delete project \\"Test\\"?</div>
    <div class=\\"footer\\">
      <button class=\\"ok danger\\" disabled=\\"\\"><span>Confirm</span></button>
      <button class=\\"cancel\\"><span>Cancel</span></button>
    </div>
  </div>
</div>
<!--ConfirmModal-->
<!--if-->
<!--if-->
",
}
`;

exports[`render errors 1`] = `
Object {
  "Constructor": "ProjectDeletePage",
  "Options": Object {
    "ID": "widget",
    "containerSelector": "body",
    "dataLoaded": true,
    "dataSaving": false,
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "errors": Array [
      "Load project fail!",
    ],
    "project": Object {
      "chains": Array [],
    },
    "types": Array [],
  },
  "html": "
<ul class=\\"breadcrumb\\">
  <li>
    <a href=\\"/\\" class=\\"\\">Projects
      <!--default-->
    </a>
  </li>
  <!--if-->
  <!--if-->
  <li></li>
</ul>
<!--BreadCrumb-->
<ul class=\\"errors-panel\\">
  <li>Load project fail!</li>
</ul>
<!--if-->
<!--ErrorsPanel-->
<!--if-->
<!--if-->
",
}
`;

exports[`renders correctly 1`] = `
Object {
  "Constructor": "ProjectDeletePage",
  "Options": Object {
    "ID": "widget",
    "containerSelector": "body",
    "dataLoaded": false,
    "dataSaving": false,
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "errors": Array [],
    "project": Object {},
    "types": Array [],
  },
  "html": "
<ul class=\\"breadcrumb\\">
  <li>
    <a href=\\"/\\" class=\\"\\">Projects
      <!--default-->
    </a>
  </li>
  <!--if-->
  <!--if-->
  <li></li>
</ul>
<!--BreadCrumb-->
<!--if-->
<!--FlushPageDataLoading-->
<!--if-->
",
}
`;
